# FIAP-hackaton-fase-5

./: .gitignore  GEMINI.md  README.md
ai_module/: .env-exemplo  README.md  pyproject.toml
ai_module/src/ai_module/: __init__.py  main.py
ai_module/src/ai_module/adapters/: __init__.py  base.py  factory.py  gemini_adapter.py  openai_adapter.py
ai_module/src/ai_module/api/: routes.py
ai_module/src/ai_module/api/routes/: __init__.py  analyze.py  health.py  metrics.py
ai_module/src/ai_module/core/: exceptions.py  logger.py  metrics.py  pipeline.py  preprocessor.py  prompt_builder.py  report_validator.py  settings.py  state.py
ai_module/src/ai_module/models/: queue.py  report.py  request.py
ai_module/src/ai_module/worker/: __init__.py  consumer.py  publisher.py
ai_module/tests/: conftest.py  test_aiopika_import.py
ai_module/tests/integration/: test_analyze_image.py  test_analyze_pdf.py  test_observability.py  test_routes.py
ai_module/tests/unit/: test_adapters.py  test_consumer.py  test_logger.py  test_main_docstrings.py  test_pipeline.py  test_preprocessor.py  test_prompt_builder.py  test_publisher.py  test_queue_models.py  test_rabbitmq_adapter.py  test_report_validator.py  test_routes.py  test_settings.py
docs/: phase1-summary.md  pipeline-integration.md  rabbitmq-library-choice.md  task-006-summary.md  worker-lifecycle.md  worker-runbook.md
docs/spec/: spec.md
infra/: Dockerfile  compose.yaml
specs/: FUN-009-010-plan.md  FUN-009-tasks.md  FUN-010-tasks.md
